syntax = "proto3";

option go_package = "github.com/bingooh/b-go-util/test/rpc/pb";

package test.rpc.hi;

service Greeter {
  rpc Hi (HiReq) returns (HiRsp) {}
  rpc NewServerStream(HiReq)returns(stream HiRsp){}
  rpc NewStream(stream HiReq)returns(stream HiRsp){}
}

service Waiter {
  rpc Hi(HiReq)returns(HiRsp){}
}

message HiReq{
  string name=1;
}

message HiRsp{
  string msg=1;
}